--- a/styles.css
+++ b/styles.css
@@ -1,28 +1,56 @@
 body {
-  display: flex;
-  align-items: center;
-  justify-content: center;
   height: 100vh;
   margin: 0;
-  background-color: #f4f4f4;
+}
+
+#app {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+  padding: 12px;
 }
 
 .card {
   width: 200px;
   height: 300px;
   perspective: 1000px;
-  margin: 16px;
+  margin: 12px;
 }
 
 .card:hover {
   cursor: pointer;
+
+  .card-inner {
+    border-color: #cccccc;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.16);
+  }
+}
+
+.card:focus {
+  outline: none;
+  
+  .card-inner {
+    border-color: #666666;
+  }
+}
+
+.card:focus, .card:hover {
+  .card-inner {
+    border-width: 2px;
+    margin: -1px;
+  }
 }
 
 .card-inner {
   width: 100%;
   height: 100%;
+  position: absolute;
   transform-style: preserve-3d;
-  transition: transform 0.6s;
+  border: 1px solid #dddddd;
+  border-radius: 6px;
+  box-shadow: 0 0 6px rgba(0, 0, 0, 0.1);
+  transition: border-color 0.3s, box-shadow 0.3s, transform 0.6s;
 }
 
 .card.flip .card-inner {
@@ -38,7 +66,6 @@ body {
   align-items: center;
   justify-content: center;
   font-size: 18px;
-  border: 1px solid #ccc;
 }
 
 .front {
